Enhance Flash Sale API for horizontal scaling, consistency, and add visual dashboard